<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_device"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">


            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_marginEnd="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/device_name"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginRight="100dp" />

            <TextView
                android:id="@+id/tv_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/device_name"
                android:hint="@string/ssid" />

            <TextView
                android:id="@+id/device_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_ssid"
                android:hint="@string/device_type" />


            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"

                android:src="@drawable/ic_edit_dark"
                android:contentDescription="@string/edit"
                android:visibility="gone"
                android:layout_margin="5dp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>