<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ChangePassword"
    android:layout_margin="10dp">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Password :"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/edit_background"
        android:hint="@string/currentpassword"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_below="@id/textView"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Password :"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_below="@id/et_current_password"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_weight="1"
        android:background="@drawable/edit_background"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_new_password"
        android:text="Confirm Password :"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/edit_background"
        android:hint="@string/confirm_password"
        android:layout_below="@id/textView2"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/et_confirm_password"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>
</RelativeLayout>

</ScrollView>