<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout_mobile">

        <EditText
            android:id="@+id/et_new_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_background"
            android:hint="@string/mobile"
            android:inputType="number"
            android:maxLength="12"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="OK"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout_otp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_background"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLength="12"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>