<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.OTPSend">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relative1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:id="@+id/linearLayout"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.7"
                    android:text="OTP :"
                    android:textColor="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/et_otp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </TableRow>

        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="109dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relative1"
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3.7"
                    android:text="New Password :"
                    android:textColor="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3.7"
                    android:text="@string/confirm_password"
                    android:textColor="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </TableRow>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="109dp" />
    </LinearLayout>

</RelativeLayout>
